# llm-fight-club

./: .env.example  .gitignore  api.py  main.py  pyproject.toml
scripts/: discover_models.py  verify_availability.py
src/llm_fight_club/: engine.py
src/llm_fight_club/api/: main.py
src/llm_fight_club/core/: fight.py  judging.py  models.py
src/llm_fight_club/utils/: text.py  ui.py
