[project]
name = "llm-fight-club"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "litellm>=1.80.11",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
